--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -582,8 +582,88 @@ video {
   top: 4rem;
 }
 
+.bottom-0 {
+  bottom: 0px;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.bottom-1 {
+  bottom: 0.25rem;
+}
+
+.top-20 {
+  top: 5rem;
+}
+
+.bottom-5 {
+  bottom: 1.25rem;
+}
+
+.right-5 {
+  right: 1.25rem;
+}
+
+.right-10 {
+  right: 2.5rem;
+}
+
+.top-10 {
+  top: 2.5rem;
+}
+
+.top-24 {
+  top: 6rem;
+}
+
 .z-30 {
   z-index: 30;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
+.z-20 {
+  z-index: 20;
+}
+
+.z-50 {
+  z-index: 50;
+}
+
+.z-auto {
+  z-index: auto;
+}
+
+.z-\[999\] {
+  z-index: 999;
+}
+
+.z-\[100\] {
+  z-index: 100;
+}
+
+.z-\[200\] {
+  z-index: 200;
+}
+
+.z-\[300\] {
+  z-index: 300;
+}
+
+.z-\[400\] {
+  z-index: 400;
+}
+
+.z-\[500\] {
+  z-index: 500;
+}
+
+.z-\[450\] {
+  z-index: 450;
 }
 
 .m-4 {
@@ -613,6 +693,10 @@ video {
 
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.box-border {
+  box-sizing: border-box;
 }
 
 .inline-block {
@@ -662,6 +746,86 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-\[400px\] {
+  height: 400px;
+}
+
+.h-10 {
+  height: 2.5rem;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
+.h-\[\] {
+  height: ;
+}
+
+.h-\[calc\(100vh-200px\)\] {
+  height: calc(100vh - 200px);
+}
+
+.h-\[calc\(100vh-100px\)\] {
+  height: calc(100vh - 100px);
+}
+
+.h-\[calc\(100-200px\)\] {
+  height: calc(100 - 200px);
+}
+
+.h-\[calc\(100\%-200px\)\] {
+  height: calc(100% - 200px);
+}
+
+.h-\[calc\(100\%-10px\)\] {
+  height: calc(100% - 10px);
+}
+
+.h-\[calc\(100\%-32px\)\] {
+  height: calc(100% - 32px);
+}
+
+.h-\[calc\(100vh-32px\)\] {
+  height: calc(100vh - 32px);
+}
+
+.h-16 {
+  height: 4rem;
+}
+
+.max-h-\[calc\(\)\] {
+  max-height: calc();
+}
+
+.max-h-\[calc\(100\)\] {
+  max-height: calc(100);
+}
+
+.max-h-\[calc\(100vh\)\] {
+  max-height: calc(100vh);
+}
+
+.max-h-\[calc\(100vh-\)\] {
+  max-height: calc(100vh - );
+}
+
+.max-h-\[calc\(100vh-24px\)\] {
+  max-height: calc(100vh - 24px);
+}
+
+.max-h-\[calc\(100vh-48px\)\] {
+  max-height: calc(100vh - 48px);
+}
+
+.max-h-\[calc\(100vh-100px\)\] {
+  max-height: calc(100vh - 100px);
+}
+
+.max-h-\[calc\(100vh-200px\)\] {
+  max-height: calc(100vh - 200px);
 }
 
 .min-h-\[100px\] {
@@ -714,6 +878,27 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-max {
+  width: -moz-max-content;
+  width: max-content;
+}
+
+.w-\[calc\] {
+  width: calc;
+}
+
+.w-\[calc\(\)\] {
+  width: calc();
+}
+
+.w-\[calc\(100\%\)\] {
+  width: calc(100%);
+}
+
+.w-\[calc\(100\%-48px\)\] {
+  width: calc(100% - 48px);
 }
 
 .min-w-\[568px\] {
@@ -898,6 +1083,16 @@ video {
   background-color: transparent;
 }
 
+.bg-red-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
+}
+
+.bg-component-dark {
+  --tw-bg-opacity: 1;
+  background-color: rgb(32 43 59 / var(--tw-bg-opacity));
+}
+
 .p-2 {
   padding: 0.5rem;
 }
@@ -971,6 +1166,10 @@ video {
 
 .pt-7 {
   padding-top: 1.75rem;
+}
+
+.pr-2 {
+  padding-right: 0.5rem;
 }
 
 .text-center {
@@ -1087,6 +1286,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-primary-d {
+  --tw-text-opacity: 1;
+  color: rgb(221 224 228 / var(--tw-text-opacity));
+}
+
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1133,6 +1337,11 @@ video {
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-component-dark-hover:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
 
 .hover\:text-blue-500:hover {
@@ -1199,6 +1408,16 @@ video {
   background-color: rgb(32 43 59 / var(--tw-bg-opacity));
 }
 
+.dark\:bg-red-600:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
+.dark\:bg-component-light:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 240 240 / var(--tw-bg-opacity));
+}
+
 .dark\:bg-opacity-50:is(.dark *) {
   --tw-bg-opacity: 0.5;
 }
@@ -1228,6 +1447,11 @@ video {
   color: rgb(248 250 252 / var(--tw-text-opacity));
 }
 
+.dark\:text-primary-l:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(27 30 34 / var(--tw-text-opacity));
+}
+
 .dark\:caret-white:is(.dark *) {
   caret-color: #fff;
 }
@@ -1245,6 +1469,11 @@ video {
 .dark\:hover\:bg-secondary-d:hover:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(136 153 162 / var(--tw-bg-opacity));
+}
+
+.dark\:hover\:bg-component-light-hover:hover:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
 
 .dark\:hover\:text-white:hover:is(.dark *) {
@@ -1281,6 +1510,14 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:top-20 {
+    top: 5rem;
+  }
+
+  .md\:right-4 {
+    right: 1rem;
+  }
+
   .md\:w-1\/3 {
     width: 33.333333%;
   }
@@ -1289,12 +1526,44 @@ video {
     width: 66.666667%;
   }
 
+  .md\:w-1\/2 {
+    width: 50%;
+  }
+
+  .md\:min-w-\[\] {
+    min-width: ;
+  }
+
+  .md\:min-w-\[700px\] {
+    min-width: 700px;
+  }
+
   .md\:flex-row {
     flex-direction: row;
   }
 }
 
 @media (min-width: 1024px) {
+  .lg\:right-0 {
+    right: 0px;
+  }
+
+  .lg\:right-4 {
+    right: 1rem;
+  }
+
+  .lg\:top-14 {
+    top: 3.5rem;
+  }
+
+  .lg\:top-16 {
+    top: 4rem;
+  }
+
+  .lg\:top-20 {
+    top: 5rem;
+  }
+
   .lg\:w-1\/3 {
     width: 33.333333%;
   }
@@ -1305,6 +1574,10 @@ video {
 
   .lg\:w-\[calc\(66\.66667\%-34px\)\] {
     width: calc(66.66667% - 34px);
+  }
+
+  .lg\:w-1\/2 {
+    width: 50%;
   }
 
   .lg\:flex-row {
