--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -606,6 +606,11 @@ video {
   margin: 1rem;
 }
 
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
@@ -726,6 +731,11 @@ video {
 
 .w-\[calc\(100\%-32px\)\] {
   width: calc(100% - 32px);
+}
+
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .w-full {
@@ -1199,11 +1209,6 @@ video {
   cursor: pointer;
 }
 
-.disabled\:bg-component-light:disabled {
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 240 240 / var(--tw-bg-opacity));
-}
-
 .disabled\:bg-component-light-hover:disabled {
   --tw-bg-opacity: 1;
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
@@ -1247,11 +1252,6 @@ video {
 .dark\:bg-component-light:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(240 240 240 / var(--tw-bg-opacity));
-}
-
-.dark\:bg-component-dark-hover:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
 
 .dark\:bg-opacity-50:is(.dark *) {
@@ -1315,6 +1315,11 @@ video {
 .dark\:hover\:text-white:hover:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.disabled\:dark\:bg-component-dark-hover:is(.dark *):disabled {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
 
 @media (min-width: 450px) {
@@ -1426,5 +1431,21 @@ video {
 
   .xl\:gap-4 {
     gap: 1rem;
+  }
+}
+
+@media (min-width: 1750px) {
+  .xxl\:w-screen {
+    width: 100vw;
+  }
+
+  .xxl\:w-fit {
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+
+  .xxl\:bg-bg-light {
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   }
 }
