--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -594,12 +594,24 @@ video {
   top: 6rem;
 }
 
+.top-10 {
+  top: 2.5rem;
+}
+
+.top-1 {
+  top: 0.25rem;
+}
+
 .z-30 {
   z-index: 30;
 }
 
 .z-\[450\] {
   z-index: 450;
+}
+
+.z-40 {
+  z-index: 40;
 }
 
 .m-4 {
@@ -689,6 +701,34 @@ video {
   height: 100vh;
 }
 
+.h-\[calc\(100-32px\)\] {
+  height: calc(100 - 32px);
+}
+
+.h-\[calc\(100\%-32px\)\] {
+  height: calc(100% - 32px);
+}
+
+.h-\[700px\] {
+  height: 700px;
+}
+
+.h-\[\] {
+  height: ;
+}
+
+.h-\[400px\] {
+  height: 400px;
+}
+
+.max-h-\[\] {
+  max-height: ;
+}
+
+.max-h-\[700px\] {
+  max-height: 700px;
+}
+
 .min-h-\[100px\] {
   min-height: 100px;
 }
@@ -741,8 +781,64 @@ video {
   width: 100vw;
 }
 
+.w-\[calc\(100\%-1rem\)\] {
+  width: calc(100% - 1rem);
+}
+
+.w-\[calc\(100\%-2rem\)\] {
+  width: calc(100% - 2rem);
+}
+
+.w-\[calc\(100\%-3rem\)\] {
+  width: calc(100% - 3rem);
+}
+
+.w-\[calc\(100\%-rem\)\] {
+  width: calc(100% - rem);
+}
+
+.w-\[calc\(\)\] {
+  width: calc();
+}
+
+.w-\[calc\(100\%\)\] {
+  width: calc(100%);
+}
+
+.w-\[calc\(100vw-32px\)\] {
+  width: calc(100vw - 32px);
+}
+
+.w-\[calc\(100vw-48px\)\] {
+  width: calc(100vw - 48px);
+}
+
+.w-\[calc\(100vw-80px\)\] {
+  width: calc(100vw - 80px);
+}
+
+.w-\[calc\(100-80px\)\] {
+  width: calc(100 - 80px);
+}
+
+.w-\[calc\(100\%-80px\)\] {
+  width: calc(100% - 80px);
+}
+
+.w-\[calc\(100\%-48px\)\] {
+  width: calc(100% - 48px);
+}
+
+.w-\[calc\(100\%-16px\)\] {
+  width: calc(100% - 16px);
+}
+
 .min-w-\[568px\] {
   min-width: 568px;
+}
+
+.min-w-\[700px\] {
+  min-width: 700px;
 }
 
 .max-w-\[2000px\] {
@@ -1352,8 +1448,29 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:relative {
+    position: relative;
+  }
+
   .md\:right-4 {
     right: 1rem;
+  }
+
+  .md\:right-0 {
+    right: 0px;
+  }
+
+  .md\:left-0 {
+    left: 0px;
+  }
+
+  .md\:top-0 {
+    top: 0px;
+  }
+
+  .md\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .md\:w-1\/2 {
@@ -1368,6 +1485,14 @@ video {
     width: 66.666667%;
   }
 
+  .md\:w-screen {
+    width: 100vw;
+  }
+
+  .md\:w-\[700px\] {
+    width: 700px;
+  }
+
   .md\:min-w-\[700px\] {
     min-width: 700px;
   }
@@ -1378,6 +1503,18 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:relative {
+    position: relative;
+  }
+
+  .lg\:top-0 {
+    top: 0px;
+  }
+
+  .lg\:h-\[700px\] {
+    height: 700px;
+  }
+
   .lg\:w-1\/3 {
     width: 33.333333%;
   }
@@ -1388,6 +1525,46 @@ video {
 
   .lg\:w-\[calc\(66\.66667\%-34px\)\] {
     width: calc(66.66667% - 34px);
+  }
+
+  .lg\:w-\[calc\(66\.66667\%-2rem\)\] {
+    width: calc(66.66667% - 2rem);
+  }
+
+  .lg\:w-\[calc\(66\.66667\%-1rem\)\] {
+    width: calc(66.66667% - 1rem);
+  }
+
+  .lg\:w-\[calc\(66\.66667\%-1\.5rem\)\] {
+    width: calc(66.66667% - 1.5rem);
+  }
+
+  .lg\:w-\[calc\(66\.66667\%-1\.666rem\)\] {
+    width: calc(66.66667% - 1.666rem);
+  }
+
+  .lg\:w-\[calc\(66\.66667\%-1\.rem\)\] {
+    width: calc(66.66667% - 1.rem);
+  }
+
+  .lg\:w-\[calc\(66\.66667\%-1\.7rem\)\] {
+    width: calc(66.66667% - 1.7rem);
+  }
+
+  .lg\:w-\[calc\(66\.66667\%-1\.4rem\)\] {
+    width: calc(66.66667% - 1.4rem);
+  }
+
+  .lg\:w-full {
+    width: 100%;
+  }
+
+  .lg\:w-1\/2 {
+    width: 50%;
+  }
+
+  .lg\:min-w-\[700px\] {
+    min-width: 700px;
   }
 
   .lg\:flex-row {
@@ -1436,6 +1613,18 @@ video {
 }
 
 @media (min-width: 1750px) {
+  .xxl\:right-1 {
+    right: 0.25rem;
+  }
+
+  .xxl\:right-1\/2 {
+    right: 50%;
+  }
+
+  .xxl\:right-1\/3 {
+    right: 33.333333%;
+  }
+
   .xxl\:w-fit {
     width: -moz-fit-content;
     width: fit-content;
